<resources>
    <string name="app_name">AndroidERestaurant</string>
    <string name="entrees_action">Entrées</string>
    <string name="plats_action">Plats</string>
    <string name="desserts_action">Desserts</string>
    <string name="category_title" />
    <string name="element_text" />
    <string name="textView2">E-Restaurant Mourier</string>
    <string name="detail_title" />
    <string name="textView3">🍅🥕🥒🍽️🌽🍓 Ingredients 🍓🌽🍽️🥒🥕🍅</string>
    <string name="buttonBle">Bluetooth</string>
    <string name="textBlePlay">Lancer le scan BLE</string>
    <string name="textBlePause">Scan en cours</string>
    <string name="title_activity_le_device_list_adapter">LeDeviceListAdapter</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="totalText">Total = 0 €</string>
    <string name="quantiteText">0</string>

    <string name="ble_device_status">Status : %1$s</string>
    <string name="ble_device_status_connecting">Connexion en cours</string>
    <string name="ble_device_status_connected">Connecté</string>
    <string name="ble_device_status_disconnected">Déconnecté</string>
    <string name="ble_device_status_disconnecting">Déconnexion en cours</string>
    <string name="carac_specifique">Caractéristiques spécifiques</string>
</resources>